<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="KeyboardInaccessibleWidget">

    <ImageView
        android:id="@+id/ivToolbarLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_toolbar_logo"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/btBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:src="@drawable/ic_back"
        android:background="@android:color/white"
        app:layout_constraintTop_toTopOf="@+id/ivToolbarLogo"
        app:layout_constraintBottom_toBottomOf="@+id/ivToolbarLogo"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_margin="24dp"
        android:src="@drawable/wallet_logo_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btBack"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/fragment_about_full_app_name"
        style="@style/headerTextView"
        app:layout_constraintStart_toEndOf="@+id/ivLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivLogo"
        app:layout_constraintBottom_toBottomOf="@+id/ivLogo" />

    <TextView
        android:id="@+id/tvTitleAboutApp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/fragment_about_about_the_app"
        style="@style/inactiveTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <TextView
        android:id="@+id/tvAboutApp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        style="@style/normalTextView"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleAboutApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/fragment_about_description" />

    <TextView
        android:id="@+id/tvTitleWebsite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/fragment_about_our_website"
        style="@style/inactiveTextView"
        app:layout_constraintTop_toBottomOf="@+id/tvAboutApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvWebsite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/fragment_about_website"
        style="@style/linkTextView"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleWebsite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvTitleDropUsALine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/fragment_about_drop_us_a_line"
        style="@style/inactiveTextView"
        app:layout_constraintTop_toBottomOf="@+id/tvWebsite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDropUsALine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/support_email"
        style="@style/linkTextView"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleDropUsALine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvTitleFollow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/fragment_about_follow"
        style="@style/inactiveTextView"
        app:layout_constraintTop_toBottomOf="@+id/tvDropUsALine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_vertical|start"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleFollow">

        <ImageButton
            android:id="@+id/btFacebook"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="?selectableItemBackground"
            android:padding="8dp"
            android:src="@drawable/facebook_icon"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/btTwitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="?selectableItemBackground"
            android:padding="8dp"
            android:src="@drawable/twitter_icon"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/btReddit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="?selectableItemBackground"
            android:padding="8dp"
            android:src="@drawable/reddit_icon"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/btMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="?selectableItemBackground"
            android:padding="8dp"
            android:src="@drawable/medium_icon"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/btTelegram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="?selectableItemBackground"
            android:padding="8dp"
            android:src="@drawable/telegram_icon"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvBlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/fragment_about_blog"
            style="@style/linkTextView" />

    </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/fragment_about_lumi_technologies"
        android:textSize="12sp"
        android:textColor="@color/silver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>