<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/vAddOutput"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:elevation="4dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:ignore="KeyboardInaccessibleWidget">

    <ImageView
        android:id="@+id/ivToolbarLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_toolbar_logo"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ivAddOutputBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:src="@drawable/ic_back"
        android:background="?selectableItemBackground"
        app:layout_constraintTop_toTopOf="@+id/ivToolbarLogo"
        app:layout_constraintBottom_toBottomOf="@+id/ivToolbarLogo"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvTitleAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/fragment_add_output_address"
        style="@style/headerTextView"
        app:layout_constraintTop_toBottomOf="@+id/ivAddOutputBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etOutAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:hint="@string/fragment_add_output_address_hint"
        style="@style/normalTextView"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/vSeparator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:background="@color/black_015"
        app:layout_constraintTop_toBottomOf="@+id/etOutAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvTitleAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/fragment_add_output_amount"
        style="@style/headerTextView"
        app:layout_constraintTop_toBottomOf="@+id/vSeparator"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etOutAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:textAlignment="textEnd"
        android:inputType="number"
        android:singleLine="true"
        android:layout_marginEnd="8dp"
        android:hint="@string/zero_placeholder"
        style="@style/normalTextView"
        app:layout_constraintStart_toEndOf="@id/tvTitleAmount"
        app:layout_constraintEnd_toStartOf="@+id/tvSatoshi"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvTitleAmount" />

    <TextView
        android:id="@+id/tvSatoshi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/satoshi_shortname"
        android:layout_marginEnd="16dp"
        style="@style/normalTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/etOutAmount"/>

    <View
        android:id="@+id/vSeparator1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:background="@color/black_015"
        app:layout_constraintTop_toBottomOf="@+id/tvSatoshi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btAddOutput"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/fragment_add_output_add_output"
        style="@style/blackButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>